compiler/testData/cli/js/diagnosticForUnhandledElements.out
compiler/testData/cli/js/diagnosticForUnhandledElements.kt:10:17: error: cannot translate (not supported yet): '@fancy 1'
        return (@fancy 1)
                ^
COMPILATION_ERROR
